k8s/api-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: api-deployment
  labels: 
    app.kubernetes.io/name: api
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app.kubernetes.io/name: api
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: auth-app
  template: 
    metadata: 
      labels:
        app.kubernetes.io/name: api
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: auth-app
    spec:
      # imagePullSecrets: 
      #   - name: docker-hub-secret
      containers:
        - name: api-container
          image: kadim72/projet5b-gke-node-api 
          ports: 
            - containerPort: 80
          resources: 
            requests:
              cpu: "250m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory:  "128Mi"
          livenessProbe:
            httpGet:
              path: /api/user/current
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15 
          readinessProbe:
            httpGet:
              path: /api/user/current
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
