k8s/frontend-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: frontend-deployment
  labels: 
    app.kubernetes.io/name: vue-app
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vue-app
      app.kubernetes.io/component: frontend
      app.kubernetes.io/part-of: auth-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vue-app
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: auth-app
    spec: 
      containers:
        - name: frontend
          image: kadim72/projet5-gke-vue
          ports:
            - containerPort: 80 
          volumeMounts:
            - name : nginx-config-volume
              mountPath: /etc/nginx/conf.d
          resources: 
            requests:
              cpu: "250m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory:  "256Mi"
      volumes: 
        - name: nginx-config-volume
          configMap: 
            name: nginx-config
            items:
              - key: nginx.conf
                path: default.conf 
      imagePullSecrets:
        - name: docker-hub-secret
