k8s/api-services.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: api-service
  labels: 
    app.kubernetes.io/name: api
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
  ports:
    - port: 80
      targetPort: 80
