k8s/frontend-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: frontend-service
  labels: 
    app.kubernetes.io/name: vue-app
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: auth-app
spec:
  type: ClusterIP
  selector:
      app.kubernetes.io/name: vue-app
      app.kubernetes.io/component: frontend
      app.kubernetes.io/part-of: auth-app
  ports: 
    - port: 80
      targetPort: 80
