k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: emahisovh 
    networking.gke.io/managed-certificate: managed-cert
    networking.gke.io/v1beta1.FrontEndConfig: redirect-https
spec:
  defaultBackend:
          service:
            name: frontend-service
            port:
              number: 80
  rules:
  -  http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
